make dt-dm definition more precise

--- a/TimeScalesinYSOVAR.ipynb
+++ b/TimeScalesinYSOVAR.ipynb
@@ -523,7 +523,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "First, I normalize the lightcurve to mean = 0 and stddev = 1, then I calculate for all possible pairings of datapoints $\\delta t$ and $\\delta m$. The resulting point cloud is plotted below. Now, instead of binning the original lightcurve, I bin this point cloud using different bin widths (colored lines in the plot). The maximum $\\delta t$ is about 600 days but I zoom into the plot to show the interesting stuff for small time scales.\n",
+      "First, I normalize the lightcurve to mean = 0 and stddev = 1, then I calculate for all possible pairings of datapoints $i$ and $j$ the time difference $\\delta t_{ij}$ and $\\frac{(m_i - \\hat m) * (m_j- \\hat m)}{\\sigma_m^2}\\ $, where $\\hat m\\ $ is the mean of all $m$ and $\\sigma_m$ is the standard deviation. The resulting point cloud is plotted below. Now, instead of binning the original lightcurve, I bin this point cloud using different bin widths (colored lines in the plot). The maximum $\\delta t$ is about 600 days but I zoom into the plot to show the interesting stuff for small time scales.\n",
       "\n",
       "*This binned version is exactly equal to the autocorrelation function (ACF) in the limit a a regular time sampling.* (Contact me if you want to see the math.)"
      ]
